# copilotkit-langgraph-agui-fastapi-with-persistence

./: .gitignore  AGENTS.md  IMPLEMENTATION_SUMMARY.md  PERSISTENCE_WORKAROUND.md  TESTING_INSTRUCTIONS.md  package.json  playwright.config.ts
agent/: .gitignore  monkey_patch_ag_ui_langgraph.py  pyproject.toml  requirements.txt
agent/sample_agent/: agent.py  demo.py
src/app/: layout.tsx  page.tsx
src/app/api/copilotkit/: route.ts
src/lib/: agent-state-loader.ts
tests/e2e/: chat.spec.ts
